<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:layout_marginLeft="10dp">
 
  <!-- Screen Design for Photos -->
  <TextView 
      android:text="@string/anlagd_header"
            android:padding="15dp"
            android:textSize="24sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
 <TextView 
     android:text="@string/anlagd_text"
           android:padding="15dp"
            android:textSize="16sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
 
   <RadioGroup
        android:padding="15dp" 
        android:id="@+id/anlagdRadio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
 
        <RadioButton
            android:id="@+id/radio_anlagd1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_anlagd1" 
            android:onClick="onRadioButtonClicked"
             />
 
        <RadioButton
            android:id="@+id/radio_anlagd2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_anlagd2"
            android:onClick="onRadioButtonClicked" />
        
        <RadioButton
            android:id="@+id/radio_anlagd3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_anlagd3"
            android:onClick="onRadioButtonClicked" 
             />
 
        <RadioButton
            android:id="@+id/radio_anlagd4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_anlagd4"
            android:onClick="onRadioButtonClicked" />
        <RadioButton
            android:id="@+id/radio_anlagd5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_anlagd5"
            android:onClick="onRadioButtonClicked" />  
    </RadioGroup>
</LinearLayout>