<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:layout_marginLeft="10dp">
 
  <!-- Screen Design for Photos -->
  <TextView 
      android:text="@string/akvatisk_header"
            android:padding="15dp"
            android:textSize="24sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
 <TextView 
     android:text="@string/akvatisktext"
           android:padding="15dp"
            android:textSize="16sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
 
   <RadioGroup
        android:padding="15dp" 
        android:id="@+id/akvatikRadio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
 
        <RadioButton
            android:id="@+id/radio_utom_mosaik"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_utom_mosaik" 
            android:onClick="onRadioButtonClicked"
             />
        <TextView 
    	 	android:text="@string/utom_mosaik_detail"
           android:padding="15dp"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
 
        <RadioButton
            android:id="@+id/radio_mosaik"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_mosaik"
            android:onClick="onRadioButtonClicked" />
         <TextView 
    	 	android:text="@string/mosaik_detail"
           android:padding="15dp"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
 
    </RadioGroup>
</LinearLayout>